--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Mon 2048 - LéandreMazarine</title>
+    <style>
+        body { background: #faf8ef; font-family: Arial; display: flex; flex-direction: column; align-items: center; }
+        #game-container { width: 300px; height: 300px; background: #bbada0; border-radius: 6px; position: relative; padding: 10px; }
+        .grid { display: grid; grid-template-columns: repeat(4, 1fr); grid-gap: 10px; }
+        .tile { width: 65px; height: 65px; background: rgba(238, 228, 218, 0.35); border-radius: 3px; 
+                display: flex; justify-content: center; align-items: center; font-size: 24px; font-weight: bold; color: #776e65; }
+        .score-box { font-size: 30px; margin: 20px; color: #776e65; }
+        .tile-2 { background: #eee4da; }
+        .tile-4 { background: #ede0c8; }
+        .tile-8 { background: #f2b179; color: white; }
+    </style>
+</head>
+<body>
 
+    <div class="score-box">Score: <span id="mon-score">0</span></div>
+    
+    <div id="game-container">
+        <div class="grid" id="grid">
+            </div>
+    </div>
+
+    <script>
+        // LE CERVEAU DU JEU
+        let score = 0;
+        const gridDisplay = document.getElementById('grid');
+        const scoreDisplay = document.getElementById('mon-score');
+
+        // Création d'un tableau vide (le jeu)
+        let squares = [];
+
+        function createBoard() {
+            for (let i = 0; i < 16; i++) {
+                let tile = document.createElement('div');
+                tile.className = 'tile';
+                tile.innerHTML = (i === 0 || i === 5) ? 2 : ''; // On commence avec deux "2"
+                if(tile.innerHTML == '2') tile.classList.add('tile-2');
+                gridDisplay.appendChild(tile);
+                squares.push(tile);
+            }
+        }
+        createBoard();
+
+        // FONCTION DE TRICHE (HACK)
+        // Tape 'triche()' dans ta console pour gagner !
+        function triche() {
+            score = 999999;
+            scoreDisplay.innerHTML = score;
+            squares[0].innerHTML = 2048;
+            squares[0].className = 'tile tile-8';
+            console.log("Hack activé !");
+        }
+    </script>
+</body>
+</html>
